--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -685,23 +685,49 @@ body {
 a {
   transition: color 0.6s;
 }
-.cid-s48MCQYojq {
-  background-image: url("../../../assets/images/mbr-1920x1080.jpg");
+.cid-sr5vJGm5gD {
+  background-image: url("../../../assets/images/background19.jpg");
 }
-.cid-s48MCQYojq .mbr-section-title {
+.cid-sr5vJGm5gD .mbr-text,
+.cid-sr5vJGm5gD .mbr-section-btn {
+  text-align: left;
+}
+.cid-sr5vJGm5gD .mbr-section-title {
+  text-align: left;
+}
+.cid-sr5vJGm5gD .reveal {
+  -webkit-transition: all 400ms;
+  transition: all 400ms;
+}
+.cid-sr5vJGm5gD .reveal span {
+  display: inline-block;
+  -webkit-transition: all 400ms;
+  transition: all 400ms;
+}
+.cid-sr5vJGm5gD .reveal span:after {
+  content: "";
+  position: absolute;
+  font-size: 20px;
+  font-weight: 700;
+  bottom: -10px;
+  left: 50%;
+  width: 200px;
   text-align: center;
+  opacity: 0;
+  transform: translateX(-50%) scale(0);
+  transition: all 400ms;
 }
-.cid-s48MCQYojq .mbr-text,
-.cid-s48MCQYojq .mbr-section-btn {
-  color: #232323;
-  text-align: center;
+.cid-sr5vJGm5gD .reveal:hover {
+  color: rgba(0, 0, 0, 0.1);
 }
-@media (max-width: 991px) {
-  .cid-s48MCQYojq .mbr-section-title,
-  .cid-s48MCQYojq .mbr-section-btn,
-  .cid-s48MCQYojq .mbr-text {
-    text-align: center;
-  }
+.cid-sr5vJGm5gD .reveal:hover span {
+  transform: scale(2);
+  color: #000;
+  margin: 0 45px;
+}
+.cid-sr5vJGm5gD .reveal:hover span:after {
+  opacity: 1;
+  transform: translateX(-50%) scale(1);
 }
 .cid-sqqVAnx8Y7 {
   padding-top: 1rem;
@@ -830,50 +856,6 @@ a {
   .cid-sqqVAnx8Y7 .carousel-indicators {
     display: none !important;
   }
-}
-.cid-sr5vJGm5gD {
-  background-image: url("../../../assets/images/background19.jpg");
-}
-.cid-sr5vJGm5gD .mbr-text,
-.cid-sr5vJGm5gD .mbr-section-btn {
-  text-align: left;
-}
-.cid-sr5vJGm5gD .mbr-section-title {
-  text-align: left;
-}
-.cid-sr5vJGm5gD .reveal {
-  -webkit-transition: all 400ms;
-  transition: all 400ms;
-}
-.cid-sr5vJGm5gD .reveal span {
-  display: inline-block;
-  -webkit-transition: all 400ms;
-  transition: all 400ms;
-}
-.cid-sr5vJGm5gD .reveal span:after {
-  content: "";
-  position: absolute;
-  font-size: 20px;
-  font-weight: 700;
-  bottom: -10px;
-  left: 50%;
-  width: 200px;
-  text-align: center;
-  opacity: 0;
-  transform: translateX(-50%) scale(0);
-  transition: all 400ms;
-}
-.cid-sr5vJGm5gD .reveal:hover {
-  color: rgba(0, 0, 0, 0.1);
-}
-.cid-sr5vJGm5gD .reveal:hover span {
-  transform: scale(2);
-  color: #000;
-  margin: 0 45px;
-}
-.cid-sr5vJGm5gD .reveal:hover span:after {
-  opacity: 1;
-  transform: translateX(-50%) scale(1);
 }
 .cid-s48OLK6784 {
   z-index: 1000;
@@ -1286,5 +1268,569 @@ a {
   width: 100%;
 }
 .cid-s48P1Icc8J foot-menu-item {
+  color: #ffe161;
+}
+.cid-sr5LKcevwb {
+  z-index: 1000;
+  width: 100%;
+  position: relative;
+  min-height: 60px;
+}
+.cid-sr5LKcevwb nav.navbar {
+  position: fixed;
+}
+.cid-sr5LKcevwb .dropdown-item:before {
+  font-family: Moririse2 !important;
+  content: '\e966';
+  display: inline-block;
+  width: 0;
+  position: absolute;
+  left: 1rem;
+  top: 0.5rem;
+  margin-right: 0.5rem;
+  line-height: 1;
+  font-size: inherit;
+  vertical-align: middle;
+  text-align: center;
+  overflow: hidden;
+  transform: scale(0, 1);
+  transition: all 0.25s ease-in-out;
+}
+.cid-sr5LKcevwb .dropdown-menu {
+  padding: 0;
+}
+.cid-sr5LKcevwb .dropdown-item {
+  border-bottom: 1px solid #e6e6e6;
+}
+.cid-sr5LKcevwb .dropdown-item:hover,
+.cid-sr5LKcevwb .dropdown-item:focus {
+  background: #6592e6 !important;
+  color: white !important;
+}
+.cid-sr5LKcevwb .nav-dropdown .link {
+  padding: 0 0.3em !important;
+  margin: .667em 1em !important;
+}
+.cid-sr5LKcevwb .nav-dropdown .link.dropdown-toggle::after {
+  margin-left: 0.5rem;
+  margin-top: 0.2rem;
+}
+.cid-sr5LKcevwb .nav-link {
+  position: relative;
+}
+.cid-sr5LKcevwb .container {
+  display: flex;
+  margin: auto;
+}
+.cid-sr5LKcevwb .iconfont-wrapper {
+  color: #000000 !important;
+  font-size: 1.5rem;
+  padding-right: .5rem;
+}
+.cid-sr5LKcevwb .navbar-caption {
+  padding-right: 4rem;
+}
+.cid-sr5LKcevwb .dropdown-menu,
+.cid-sr5LKcevwb .navbar.opened {
+  background: #ffffff !important;
+}
+.cid-sr5LKcevwb .nav-item:focus,
+.cid-sr5LKcevwb .nav-link:focus {
+  outline: none;
+}
+.cid-sr5LKcevwb .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  transition: all 0.25s ease-in-out;
+}
+.cid-sr5LKcevwb .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-sr5LKcevwb .dropdown .dropdown-menu .dropdown-item .mbr-iconfont {
+  margin-left: -1.8rem;
+  padding-right: 1rem;
+  font-size: inherit;
+}
+.cid-sr5LKcevwb .dropdown .dropdown-menu .dropdown-item .mbr-iconfont:before {
+  display: inline-block;
+  transform: scale(1, 1);
+  transition: all 0.25s ease-in-out;
+}
+.cid-sr5LKcevwb .collapsed .dropdown-menu .dropdown-item:before {
+  display: none;
+}
+.cid-sr5LKcevwb .collapsed .dropdown .dropdown-menu .dropdown-item {
+  padding: 0.235em 1.5em 0.235em 1.5em !important;
+  transition: none;
+  margin: 0 !important;
+}
+.cid-sr5LKcevwb .navbar {
+  min-height: 77px;
+  transition: all .3s;
+  border-bottom: 1px solid transparent;
+  background: #ffffff;
+}
+.cid-sr5LKcevwb .navbar:not(.navbar-short) {
+  border-bottom: 1px solid #e6e6e6;
+}
+.cid-sr5LKcevwb .navbar.opened {
+  transition: all .3s;
+}
+.cid-sr5LKcevwb .navbar .dropdown-item {
+  padding: .5rem 1.8rem;
+}
+.cid-sr5LKcevwb .navbar .navbar-logo img {
+  width: auto;
+}
+.cid-sr5LKcevwb .navbar .navbar-collapse {
+  justify-content: flex-end;
+  z-index: 1;
+}
+.cid-sr5LKcevwb .navbar.collapsed .nav-item .nav-link::before {
+  display: none;
+}
+.cid-sr5LKcevwb .navbar.collapsed.opened .dropdown-menu {
+  top: 0;
+}
+@media (min-width: 992px) {
+  .cid-sr5LKcevwb .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 3.8rem);
+  }
+}
+.cid-sr5LKcevwb .navbar.collapsed .dropdown-menu .dropdown-submenu {
+  left: 0 !important;
+}
+.cid-sr5LKcevwb .navbar.collapsed .dropdown-menu .dropdown-item:after {
+  right: auto;
+}
+.cid-sr5LKcevwb .navbar.collapsed .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+  margin-left: 0.5rem;
+  margin-top: 0.2rem;
+  border-top: 0.35em solid;
+  border-right: 0.35em solid transparent;
+  border-left: 0.35em solid transparent;
+  border-bottom: 0;
+  top: 55%;
+}
+.cid-sr5LKcevwb .navbar.collapsed ul.navbar-nav li {
+  margin: auto;
+}
+.cid-sr5LKcevwb .navbar.collapsed .dropdown-menu .dropdown-item {
+  padding: .25rem 1.5rem;
+  text-align: center;
+}
+.cid-sr5LKcevwb .navbar.collapsed .icons-menu {
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: .5rem;
+  padding-bottom: .5rem;
+}
+@media (max-width: 991px) {
+  .cid-sr5LKcevwb .navbar .nav-item .nav-link::before {
+    display: none;
+  }
+  .cid-sr5LKcevwb .navbar.opened .dropdown-menu {
+    top: 0;
+  }
+  .cid-sr5LKcevwb .navbar .dropdown-menu .dropdown-submenu {
+    left: 0 !important;
+  }
+  .cid-sr5LKcevwb .navbar .dropdown-menu .dropdown-item:after {
+    right: auto;
+  }
+  .cid-sr5LKcevwb .navbar .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+    margin-left: 0.5rem;
+    margin-top: 0.2rem;
+    border-top: 0.35em solid;
+    border-right: 0.35em solid transparent;
+    border-left: 0.35em solid transparent;
+    border-bottom: 0;
+    top: 55%;
+  }
+  .cid-sr5LKcevwb .navbar .navbar-logo img {
+    height: 3.8rem !important;
+  }
+  .cid-sr5LKcevwb .navbar ul.navbar-nav li {
+    margin: auto;
+  }
+  .cid-sr5LKcevwb .navbar .dropdown-menu .dropdown-item {
+    padding: .25rem 1.5rem !important;
+    text-align: center;
+  }
+  .cid-sr5LKcevwb .navbar .navbar-brand {
+    flex-shrink: initial;
+    flex-basis: auto;
+    word-break: break-word;
+    padding-right: 2rem;
+  }
+  .cid-sr5LKcevwb .navbar .navbar-toggler {
+    flex-basis: auto;
+  }
+  .cid-sr5LKcevwb .navbar .icons-menu {
+    padding-left: 0;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+  }
+}
+.cid-sr5LKcevwb .navbar.navbar-short {
+  min-height: 60px;
+}
+.cid-sr5LKcevwb .navbar.navbar-short .navbar-logo img {
+  height: 3rem !important;
+}
+.cid-sr5LKcevwb .navbar.navbar-short .navbar-brand {
+  padding: 0;
+}
+.cid-sr5LKcevwb .navbar-brand {
+  flex-shrink: 0;
+  align-items: center;
+  margin-right: 0;
+  padding: 0;
+  transition: all .3s;
+  word-break: break-word;
+  z-index: 1;
+}
+.cid-sr5LKcevwb .navbar-brand .navbar-caption {
+  line-height: inherit !important;
+}
+.cid-sr5LKcevwb .navbar-brand .navbar-logo a {
+  outline: none;
+}
+.cid-sr5LKcevwb .dropdown-item.active,
+.cid-sr5LKcevwb .dropdown-item:active {
+  background-color: transparent;
+}
+.cid-sr5LKcevwb .navbar-expand-lg .navbar-nav .nav-link {
+  padding: 0;
+}
+.cid-sr5LKcevwb .nav-dropdown .link.dropdown-toggle {
+  margin-right: 1.667em;
+}
+.cid-sr5LKcevwb .nav-dropdown .link.dropdown-toggle[aria-expanded="true"] {
+  margin-right: 0;
+  padding: 0.667em 1.667em;
+}
+.cid-sr5LKcevwb .navbar.navbar-expand-lg .dropdown .dropdown-menu {
+  background: #ffffff;
+}
+.cid-sr5LKcevwb .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+  left: 100%;
+}
+.cid-sr5LKcevwb .navbar .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-sr5LKcevwb ul.navbar-nav {
+  flex-wrap: wrap;
+}
+.cid-sr5LKcevwb .navbar-buttons {
+  text-align: center;
+  min-width: 170px;
+}
+.cid-sr5LKcevwb button.navbar-toggler {
+  outline: none;
+  width: 31px;
+  height: 20px;
+  cursor: pointer;
+  transition: all .2s;
+  position: relative;
+  align-self: center;
+}
+.cid-sr5LKcevwb button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: currentColor;
+}
+.cid-sr5LKcevwb button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-sr5LKcevwb button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-sr5LKcevwb button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-sr5LKcevwb button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-sr5LKcevwb nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-sr5LKcevwb nav.opened .hamburger span:nth-child(2) {
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-sr5LKcevwb nav.opened .hamburger span:nth-child(3) {
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-sr5LKcevwb nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-sr5LKcevwb .navbar-dropdown {
+  padding: .5rem 1rem;
+  position: fixed;
+}
+.cid-sr5LKcevwb a.nav-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cid-sr5LKcevwb .icons-menu {
+  flex-wrap: nowrap;
+  display: flex;
+  justify-content: center;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.3rem;
+  text-align: center;
+}
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .cid-sr5LKcevwb .navbar {
+    height: 77px;
+  }
+  .cid-sr5LKcevwb .navbar.opened {
+    height: auto;
+  }
+  .cid-sr5LKcevwb .nav-item .nav-link:hover::before {
+    width: 175%;
+    max-width: calc(100% + 2rem);
+    left: -1rem;
+  }
+}
+.cid-sr5MEbZVCj {
+  overflow-x: hidden !important;
+}
+.cid-sr5MEbZVCj,
+.cid-sr5MEbZVCj .scroll-wrapper {
+  padding-top: 225px;
+  padding-bottom: 225px;
+}
+.cid-sr5MEbZVCj .row {
+  backdrop-filter: blur(10px);
+  border: 1px solid white;
+}
+.cid-sr5MEbZVCj .mbr-section-title {
+  color: #ffffff;
+}
+.cid-sr5MEbZVCj .mbr-section-title span {
+  color: #6592e6;
+}
+.cid-sr5MEbZVCj .mbr-text {
+  color: #efefef;
+  letter-spacing: 5px;
+  font-weight: 100;
+}
+.cid-sr5MEbZVCj .scroll-wrapper {
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-position: 50% 50%;
+  background-size: cover;
+  position: absolute;
+  background-repeat: repeat;
+  z-index: 0;
+  -webkit-animation-duration: 30s !important;
+  animation-duration: 30s;
+  background-image: url("../../../assets/images/background10.jpg");
+  -webkit-animation: scroll-wrapper linear infinite;
+  -moz-animation: scroll-wrapper linear infinite;
+  -o-animation: scroll-wrapper linear infinite;
+  animation: scroll-wrapper linear infinite;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+}
+.cid-sr5MEbZVCj .scroll-wrapper.second {
+  left: calc(100% - 1px);
+}
+.cid-sr5MEbZVCj .mbr-overlay {
+  z-index: 1;
+}
+.cid-sr5MEbZVCj .block-content {
+  z-index: 2;
+}
+@keyframes scroll-wrapper {
+  0% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(-100%);
+    transform: translateX(-100%);
+  }
+}
+@-webkit-keyframes scroll-wrapper {
+  0% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(-100%);
+    transform: translateX(-100%);
+  }
+}
+@-moz-keyframes scroll-wrapper {
+  0% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(-100%);
+    transform: translateX(-100%);
+  }
+}
+@-o-keyframes scroll-wrapper {
+  0% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(-100%);
+    transform: translateX(-100%);
+  }
+}
+.cid-sr5MHyqfqv {
+  background-image: url("../../../assets/images/background16.jpg");
+  background-position: right;
+}
+.cid-sr5MHyqfqv .wrapper {
+  backdrop-filter: blur(10px);
+  position: relative;
+  border-top: 3px solid #ffffff;
+  border-right: 3px solid #ffffff;
+  border-left: 3px solid #ffffff;
+  padding: 2.5rem 2.5rem;
+}
+.cid-sr5MHyqfqv .wrapper:before {
+  content: "";
+  background: #ffffff;
+  position: absolute;
+  bottom: 0;
+  width: calc(90% - 130px);
+  height: 3px;
+  right: 0;
+}
+.cid-sr5MHyqfqv .wrapper:after {
+  content: "";
+  background: #ffffff;
+  position: absolute;
+  bottom: 0;
+  width: 10%;
+  height: 3px;
+  left: 0;
+}
+.cid-sr5MHyqfqv img {
+  position: absolute;
+  left: 10%;
+  bottom: -45px;
+  width: 130px;
+}
+@media (max-width: 767px) {
+  .cid-sr5MHyqfqv .wrapper {
+    padding: 1rem 1.5rem;
+  }
+}
+.cid-sr5Mm7K1Ck {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: #ffffff;
+}
+.cid-sr5Mm7K1Ck .twitter-wrapper,
+.cid-sr5Mm7K1Ck iframe {
+  min-height: 600px;
+  max-height: 600px;
+  border-radius: 4px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  color: #fff;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 455.7 455.7'%3E%3Crect width='455.7' height='455.7' fill='%2350ABF1'/%3E%3Cpath d='M60.4 337.8c30.3 19.2 66.3 30.4 104.9 30.4 108.3 0 196.2-87.8 196.2-196.2 0-2.7-0.1-5.4-0.2-8.1 3.9-3.1 28.2-22.5 34.1-35 0 0-19.7 8.2-38.9 10.1 0 0-0.1 0-0.1 0 0 0 0 0 0.1-0.1 1.8-1.2 26.6-18.1 30-38.2 0 0-13.9 7.4-33.4 13.9 -3.2 1.1-6.6 2.1-10.1 3.1 -12.6-13.4-30.4-21.8-50.2-21.8 -38 0-68.8 30.8-68.8 68.8 0 5.4 0.6 10.6 1.8 15.6 -5.3-0.2-86.2-4.8-141.3-71.4 0 0-32.9 44.9 19.6 91.1 0 0-16-0.6-29.7-8.9 0 0-5.1 54.4 54.4 68.3 0 0-11.7 4.4-30.4 1.3 0 0 10.4 44 63.3 48.1 0 0-41.8 37.7-101.1 28.9L60.4 337.8z' fill='%23FFF'/%3E%3C/svg%3E");
+}
+.cid-sr5Mm7K1Ck a.twitter-timeline {
+  display: none;
+}
+.cid-sr5LKcSJ80 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  background-color: #232323;
+}
+.cid-sr5LKcSJ80 .row-links {
+  width: 100%;
+  justify-content: center;
+}
+.cid-sr5LKcSJ80 .social-row {
+  width: 100%;
+  justify-content: center;
+}
+.cid-sr5LKcSJ80 .media-container-row {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.cid-sr5LKcSJ80 .media-container-row .foot-menu {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 0;
+}
+.cid-sr5LKcSJ80 .media-container-row .foot-menu li {
+  padding: 0 1rem 1rem 1rem;
+}
+.cid-sr5LKcSJ80 .media-container-row .foot-menu li p {
+  margin: 0;
+}
+.cid-sr5LKcSJ80 .media-container-row .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+}
+.cid-sr5LKcSJ80 .media-container-row .social-list .mbr-iconfont-social {
+  font-size: 1.5rem;
+  color: #ffffff;
+}
+.cid-sr5LKcSJ80 .media-container-row .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-sr5LKcSJ80 .media-container-row .social-list a {
+  margin: 0;
+  opacity: .5;
+  transition: .2s linear;
+}
+.cid-sr5LKcSJ80 .media-container-row .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-sr5LKcSJ80 .media-container-row .social-list {
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+}
+.cid-sr5LKcSJ80 .media-container-row .row-copirayt {
+  word-break: break-word;
+  width: 100%;
+}
+.cid-sr5LKcSJ80 .media-container-row .row-copirayt p {
+  width: 100%;
+}
+.cid-sr5LKcSJ80 foot-menu-item {
   color: #ffe161;
 }
